erDiagram
    USER {
        CHAR(36) id PK
        VARCHAR first_name
        VARCHAR last_name
        VARCHAR email_Unique
        VARCHAR password
        BOOLEAN is_admin
    }

    PLACE {
        CHAR(36) id PK
        VARCHAR title
        TEXT description
        DECIMAL price
        FLOAT latitude
        FLOAT longitude
        CHAR(36) owner_id FK
    }

    REVIEW {
      CHAR(36) id PK
      TEXT text
      INT rating
      CHAR(36) user_id FK
      CHAR(36) place_id FK
    }

    AMENITY {
      CHAR(36) id PK
      VARCHAR name_UNIQUE
    }

    PLACE_AMENITY {
      CHAR(36) place_id PK, FK
      CHAR(36) amenity_id PK, FK
    }

    USER ||--o{ PLACE : owns
    PLACE ||--o{ REVIEW : has
    USER ||--o{ REVIEW : writes
    PLACE ||--o{ PLACE_AMENITY : includes
    AMENITY ||--o{ PLACE_AMENITY : associated_with
